# infa-xml-analyzer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: malformed.xml  sample_export.xml
promotion/: linkedin_post.md  reddit_post.md
src/infa_xml_analyzer/: __init__.py  cli.py  formatter.py  parser.py
tests/: test_cli.py  test_parser.py
